# gnome-mahjongg

./: .gitlab-ci.yml  .valalintignore  Makefile.am  NEWS  README  README.md  REUSE.toml  configure.ac  gnome-mahjongg.doap  meson.build  meson_options.txt
build-aux/flatpak/: org.gnome.Mahjongg.Devel.json  org.gnome.Mahjongg.Devel.json.license
data/: Makefile.am  gnome-mahjongg.6  gnome-mahjongg.appdata.xml  gnome-mahjongg.appdata.xml.in  gnome-mahjongg.desktop.in  gnome-mahjongg.desktop.in.in  gnome-mahjongg.gresource.xml  help-overlay.ui  mahjongg.map  meson.build  meson_post_install.py  org.gnome.Mahjongg.appdata.xml.in  org.gnome.Mahjongg.appdata.xml.in.in  org.gnome.Mahjongg.desktop.in  org.gnome.Mahjongg.desktop.in.in  org.gnome.Mahjongg.desktop.in.in.license  org.gnome.Mahjongg.gresource.xml  org.gnome.Mahjongg.gresource.xml.in  org.gnome.Mahjongg.gschema.xml  org.gnome.Mahjongg.gschema.xml.in  org.gnome.Mahjongg.metainfo.xml.in.in  org.gnome.Mahjongg.service.in  org.gnome.Mahjongg.service.in.license  org.gnome.gnome-mahjongg.gschema.xml  org.gnome.gnome-mahjongg.gschema.xml.in  screenshot.png.license  screenshot2.png.license  style-dark.css  style.css  translatable_game_names.h
data/css/: style-dark.css  style.css
data/icons/: Makefile.am
data/icons/HighContrast/: Makefile.am
data/icons/hicolor/: Makefile.am
data/maps/: mahjongg.map
data/themes/: educational.png.license  educational.svgz  educational.svgz.license  postmodern.svg.license  smooth.png.license  smooth.svgz
data/ui/: help-overlay.ui  menu.ui  pause-overlay.ui  preferences.ui  rules-dialog.ui  score-dialog.ui  shortcuts-dialog.ui  window.ui
flatpak/: org.gnome.Mahjongg.json  org.gnome.Mahjongg.yaml  org.gnome.gnome-mahjongg.json  org.gnome.gnome-mahjongg.yaml
help/: ChangeLog.old  LINGUAS  Makefile.am  mahjongg.omf.in  meson.build
help/C/: bonustiles.page  bug-filing.page  choosing.page  develop.page  documentation.page  gameplay.page  hints.page  index.page  map.page  moves.page  pause.page  rules.page  scoring.page  shortcuts.page  strategy.page  toolbar.page  translate.page
help/C/figures/: hints-video.ogv  hints-video.webm  mahjongg-video.ogv  mahjongg-video.webm
help/bg/: bg.po
help/ca/: ca.po
help/cs/: cs.po
help/da/: da.po
help/de/: de.po
help/el/: el.po
help/en_GB/: en_GB.po
help/es/: es.po
help/eu/: eu.po
help/fr/: fr.po
help/hu/: hu.po
help/id/: id.po
help/it/: it.po
help/ko/: ko.po
help/oc/: oc.po
help/pl/: pl.po
help/pt_BR/: pt_BR.po
help/ro/: ro.po
help/ru/: ru.po
help/sl/: sl.po
help/sr/: sr.po
help/sr@latin/: sr@latin.po
help/sv/: sv.po
help/uk/: uk.po
help/zh_CN/: zh_CN.po
po/: LINGUAS  Makevars  POTFILES.in  POTFILES.skip  ab.po  af.po  am.po  an.po  ar.po  as.po  ast.po  az.po  be.po  bg.po  bn.po  bn_IN.po  br.po  bs.po  ca.po  ca@valencia.po  ckb.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en@shaw.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fur.po  ga.po  gl.po  (+58 more)
snap/: snapcraft.yaml
src/: Makefile.am  config.vapi  fixes.vapi  game-save.vala  game-view.vala  game.vala  gnome-mahjongg.gresource.xml  gnome-mahjongg.vala  history.vala  map.vala  menu.ui  meson.build  pause-overlay.vala  preferences.vala  rules-dialog.vala  score-dialog.vala  window.vala
subprojects/: libgnome-games-support.wrap
subprojects/libgnome-games-support/: .meson-subproject-wrap-hash.txt
subprojects/libgnome-games-support/games/: meson.build
subprojects/packagefiles/: 0002.patch
tests/: maps.gresource.xml  meson.build  test-game.vala  test-map.vala
tests/data/: invalid.map
