@YELP_HELP_RULES@
HELP_ID = gnome-mahjongg

HELP_MEDIA = \
	figures/hints-video.ogv		\
	figures/layout-bridges.png	\
	figures/layout-cloud.png	\
	figures/layout-conf-cross.png	\
	figures/layout-difficult.png	\
	figures/layout-easy.png		\
	figures/layout-pyramid-walls.png\
	figures/layout-red-dragon.png	\
	figures/layout-tic-tac-toe.png	\
	figures/layout-overpass.png	\
	figures/layout-ziggurat.png	\
	figures/logo32.png		\
	figures/logo.png		\
	figures/mahjongg-video.ogv	\
	figures/yellow-symbol.png	\
	figures/black-symbol.png	\
	figures/moves-left.png

HELP_FILES = \
	bug-filing.page			\
	bonustiles.page 		\
	develop.page			\
	documentation.page		\
	gameplay.page			\
	hints.page			\
	index.page			\
	legal.xml			\
	license.page			\
	map.page			\
	moves.page			\
	pause.page			\
	rules.page			\
	scoring.page			\
	shortcuts.page			\
	strategy.page			\
	translate.page

HELP_LINGUAS = ca cs da el en_GB es eu fr hu it oc ru sl sr sr@latin sv de zh_CN

-include $(top_srcdir)/git.mk
