gnome.yelp ('gnome-mahjongg',
            sources: [ 'bonustiles.page',
                       'gameplay.page',
                       'hints.page',
                       'index.page',
                       'legal.xml',
                       'license.page',
                       'map.page',
                       'moves.page',
                       'pause.page',
                       'rules.page',
                       'scoring.page',
                       'strategy.page' ],
            media: [ 'figures/hints-video.ogv',
                     'figures/keyboard-key-pause.svg',
                     'figures/layout-bridges.png',
                     'figures/layout-cloud.png',
                     'figures/layout-conf-cross.png',
                     'figures/layout-difficult.png',
                     'figures/layout-easy.png',
                     'figures/layout-pyramid-walls.png',
                     'figures/layout-red-dragon.png',
                     'figures/layout-tic-tac-toe.png',
                     'figures/layout-overpass.png',
                     'figures/layout-ziggurat.png',
                     'figures/mahjongg-video.ogv',
                     'figures/org.gnome.Mahjongg.svg',
                     'figures/yellow-symbol.png',
                     'figures/black-symbol.png' ],
            symlink_media: true)
