gnome.yelp ('gnome-mahjongg',
            sources: [ 'gameplay.page',
                       'hints.page',
                       'index.page',
                       'legal.xml',
                       'license.page',
                       'moves.page',
                       'pause.page',
                       'rules.page',
                       'scoring.page',
                       'strategy.page' ],
            media: [ 'figures/hints-video.ogv',
                     'figures/mahjongg-video.ogv',
                     'figures/org.gnome.Mahjongg.svg' ],
            symlink_media: true)
