# SPDX-FileCopyrightText: 2018-2025 Mahjongg Contributors
# SPDX-License-Identifier: GPL-2.0-or-later

gnome.yelp ('gnome-mahjongg',
            sources: [ 'gameplay.page',
                       'hints.page',
                       'index.page',
                       'legal.xml',
                       'license.page',
                       'moves.page',
                       'pause.page',
                       'rules.page',
                       'scoring.page',
                       'strategy.page' ],
            media: [ 'figures/hints-video.webm',
                     'figures/mahjongg-video.webm',
                     'figures/org.gnome.Mahjongg.svg' ],
            symlink_media: true)
