resources = gnome.compile_resources ('resources', '../data/gnome-mahjongg.gresource.xml',
                                     source_dir: '../data',
                                     c_name: 'resources')

gnome_mahjongg = executable ('gnome-mahjongg',
                             [ 'config.vapi',
                               'game.vala',
                               'game-view.vala',                               
                               'gnome-mahjongg.vala',
                               'history.vala',
                               'map.vala',                               
                               'score-dialog.vala'] + resources,
                             dependencies: [ glib_dep,
                                             gtk_dep,
                                             librsvg_dep ],
                             vala_args: [ '--pkg=posix' ],
                             c_args: [ '-DVERSION="@0@"'.format (meson.project_version ()),
                                       '-DGETTEXT_PACKAGE="gnome-mahjongg"',
                                       '-DLOCALEDIR="@0@"'.format (localedir),
                                       '-DDATA_DIRECTORY="@0@"'.format (pkgdatadir) ],
                             install: true )
