icon16dir=$(datadir)/icons/hicolor/16x16/apps
icon22dir=$(datadir)/icons/hicolor/22x22/apps
icon24dir=$(datadir)/icons/hicolor/24x24/apps
icon32dir=$(datadir)/icons/hicolor/32x32/apps
icon48dir=$(datadir)/icons/hicolor/48x48/apps
iconscalabledir=$(datadir)/icons/hicolor/scalable/apps

icon16_DATA = 16x16/gnome-mahjongg.png
icon22_DATA = 22x22/gnome-mahjongg.png
icon24_DATA = 24x24/gnome-mahjongg.png
icon32_DATA = 32x32/gnome-mahjongg.png
icon48_DATA = 48x48/gnome-mahjongg.png
iconscalable_DATA = scalable/gnome-mahjongg.svg

EXTRA_DIST = $(icon16_DATA) $(icon22_DATA) $(icon24_DATA) $(icon32_DATA) $(icon48_DATA) $(iconscalable_DATA)

-include $(top_srcdir)/git.mk
